--- a/DataBridgeRework/DataBridgeRework.csproj
+++ b/DataBridgeRework/DataBridgeRework.csproj
@@ -17,18 +17,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.8" />
-        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.8" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.2.8" />
-        <PackageReference Include="Avalonia.Svg.Skia" Version="11.2.7.1" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.8" />
+        <PackageReference Include="Avalonia" Version="11.3.0" />
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.0" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
+        <PackageReference Include="Avalonia.Svg.Skia" Version="11.2.7.1"/>
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.0" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.8" />
-        <PackageReference Include="Avalonia.Themes.Simple" Version="11.2.8" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.0" />
+        <PackageReference Include="Avalonia.Themes.Simple" Version="11.3.0" />
         <PackageReference Include="CommunityToolkit.Labs.Extensions.DependencyInjection" Version="0.1.250319-build.2093"/>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-        <PackageReference Include="FluentAvaloniaUI" Version="2.3.0"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
+        <PackageReference Include="FluentAvaloniaUI" Version="2.4.0-preview1"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3"/>
-        <PackageReference Include="SSH.NET" Version="2024.2.0" />
+        <PackageReference Include="SSH.NET" Version="2024.2.0"/>
     </ItemGroup>
 </Project>
