--- a/DataBridgeRework/DataBridgeRework.csproj
+++ b/DataBridgeRework/DataBridgeRework.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AsyncAwaitBestPractices" Version="9.0.0" />
         <PackageReference Include="Avalonia" Version="11.3.0" />
         <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
