Added JSON support for AOT

--- a/DataBridgeRework/DataBridgeRework.csproj
+++ b/DataBridgeRework/DataBridgeRework.csproj
@@ -5,11 +5,10 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-        <PublishTrimmed>True</PublishTrimmed>
+        
         <PublishAot>True</PublishAot>
+        <BuiltInComInteropSupport>false</BuiltInComInteropSupport>
+        <TrimMode>link</TrimMode>        
     </PropertyGroup>
 
     <ItemGroup>
